More fixes for the stars alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   overflow: hidden;
-  padding-top: 6vh;
+  padding-top: 8vh;
 }
 
 .chestWrapper {
@@ -53,8 +53,7 @@ body {
   width: 80%;
   padding-left: 10%;
   padding-right: 10%;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .chestdiv {
@@ -69,7 +68,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 40px;
   width: 100%;
   /* margin: 40px 100px 0px 0px; */
 }
@@ -88,8 +87,10 @@ body {
 .starWrapper {
   width: 100%;
   /* margin-bottom: 40px; */
-  padding-top: 20px;
+  /* padding-top: 20px; */
   padding-bottom: 20px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
 .topstarh {
@@ -187,6 +188,7 @@ body {
   width: 85%;
   height: auto;
   min-height: 200px;
+  margin-top: -40px;
 }
 
 button {
